deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mocklab
  labels:
    name: mocklab
    environment: production
